// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods 1`] = `
Array [
  "$",
  "C",
  "F",
  "I",
  "K",
  "T",
  "__",
  "add",
  "addIndex",
  "always",
  "and",
  "any",
  "anyPass",
  "ap",
  "binarySideEffect",
  "both",
  "box",
  "complement",
  "concat",
  "cond",
  "constant",
  "curry",
  "curryN",
  "custom",
  "def",
  "divide",
  "either",
  "equals",
  "filter",
  "flip",
  "forEach",
  "freeze",
  "fromPairs",
  "gt",
  "gte",
  "identity",
  "inspect",
  "isArray",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isObject",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "join",
  "keys",
  "last",
  "length",
  "lt",
  "lte",
  "map",
  "mash",
  "memoizeWith",
  "merge",
  "mergeRight",
  "multiply",
  "not",
  "nth",
  "or",
  "path",
  "pathEq",
  "pathOr",
  "pathSatisfies",
  "pipe",
  "prop",
  "propEq",
  "propOr",
  "propSatisfies",
  "range",
  "reduce",
  "reject",
  "sideEffect",
  "sideEffect2",
  "slice",
  "smooth",
  "some",
  "split",
  "subtract",
  "toJSON",
  "toLower",
  "toPairs",
  "toUpper",
  "trace",
  "uniq",
]
`;

exports[`methods 2`] = `
Array [
  "$",
  "C",
  "I",
  "K",
  "binarySideEffect",
  "box",
  "constant",
  "custom",
  "def",
  "freeze",
  "inspect",
  "isArray",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isObject",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "mash",
  "sideEffect",
  "sideEffect2",
  "smooth",
  "some",
  "toJSON",
  "trace",
]
`;

exports[`methods 3`] = `
Array [
  "adjust",
  "all",
  "allPass",
  "aperture",
  "append",
  "apply",
  "applySpec",
  "applyTo",
  "ascend",
  "assoc",
  "assocPath",
  "binary",
  "bind",
  "call",
  "chain",
  "clamp",
  "clone",
  "comparator",
  "compose",
  "composeK",
  "composeP",
  "composeWith",
  "construct",
  "constructN",
  "contains",
  "converge",
  "countBy",
  "dec",
  "defaultTo",
  "descend",
  "difference",
  "differenceWith",
  "dissoc",
  "dissocPath",
  "drop",
  "dropLast",
  "dropLastWhile",
  "dropRepeats",
  "dropRepeatsWith",
  "dropWhile",
  "empty",
  "endsWith",
  "eqBy",
  "eqProps",
  "evolve",
  "find",
  "findIndex",
  "findLast",
  "findLastIndex",
  "flatten",
  "forEachObjIndexed",
  "groupBy",
  "groupWith",
  "has",
  "hasIn",
  "hasPath",
  "head",
  "identical",
  "ifElse",
  "inc",
  "includes",
  "indexBy",
  "indexOf",
  "init",
  "innerJoin",
  "insert",
  "insertAll",
  "intersection",
  "intersperse",
  "into",
  "invert",
  "invertObj",
  "invoker",
  "is",
  "isEmpty",
  "isNil",
  "juxt",
  "keysIn",
  "lastIndexOf",
  "lens",
  "lensIndex",
  "lensPath",
  "lensProp",
  "lift",
  "liftN",
  "mapAccum",
  "mapAccumRight",
  "mapObjIndexed",
  "match",
  "mathMod",
  "max",
  "maxBy",
  "mean",
  "median",
  "mergeAll",
  "mergeDeepLeft",
  "mergeDeepRight",
  "mergeDeepWith",
  "mergeDeepWithKey",
  "mergeLeft",
  "mergeWith",
  "mergeWithKey",
  "min",
  "minBy",
  "modulo",
  "move",
  "nAry",
  "negate",
  "none",
  "nthArg",
  "o",
  "objOf",
  "of",
  "omit",
  "once",
  "otherwise",
  "over",
  "pair",
  "partial",
  "partialRight",
  "partition",
  "pick",
  "pickAll",
  "pickBy",
  "pipeK",
  "pipeP",
  "pipeWith",
  "pluck",
  "prepend",
  "product",
  "project",
  "propIs",
  "props",
  "reduceBy",
  "reduceRight",
  "reduceWhile",
  "reduced",
  "remove",
  "repeat",
  "replace",
  "reverse",
  "scan",
  "sequence",
  "set",
  "sort",
  "sortBy",
  "sortWith",
  "splitAt",
  "splitEvery",
  "splitWhen",
  "startsWith",
  "sum",
  "symmetricDifference",
  "symmetricDifferenceWith",
  "tail",
  "take",
  "takeLast",
  "takeLastWhile",
  "takeWhile",
  "tap",
  "test",
  "then",
  "times",
  "toPairsIn",
  "toString",
  "transduce",
  "transpose",
  "traverse",
  "trim",
  "tryCatch",
  "type",
  "unapply",
  "unary",
  "uncurryN",
  "unfold",
  "union",
  "unionWith",
  "uniqBy",
  "uniqWith",
  "unless",
  "unnest",
  "until",
  "update",
  "useWith",
  "values",
  "valuesIn",
  "view",
  "when",
  "where",
  "whereEq",
  "without",
  "xprod",
  "zip",
  "zipObj",
  "zipWith",
  "thunkify",
]
`;

exports[`methods 4`] = `Array []`;
